# snippets-rust

./: Cargo.toml
async-runtime/: Cargo.toml  README.md
async-runtime/src/: epoll_timer.rs  main.rs
bincode_demo/: Cargo.toml
bincode_demo/src/: main.rs
chati/: Cargo.toml  README.md  demo.c  demo.txt
chati/src/: chatgpt.rs  chati.rs  comment_extractor.rs  comment_of_c.rs  openai.rs  util.rs
codecrafters-sqlite/: README.md
codecrafters-sqlite/src/: main.rs
dense_rank/: Cargo.toml
dense_rank/src/: main.rs
falsesharing/: Cargo.toml
falsesharing/src/: main.rs
fileop/: Cargo.toml  README.md  c_declaration.yml  var  var_init
fileop/data/: bar.c  foo.c
fileop/src/: main.rs
foo/src/: lib.rs  main.rs
future/: Cargo.toml
hello/: Cargo.toml  README.md
hello/src/: chatgpt.rs  chati.rs  lib.rs  main.rs
hello/src/lib/: comment_extractor.rs  comment_of_c.rs  mod.rs  openai.rs  util.rs
macro/src/: main.rs
memory_reorder_by_cpu/: Cargo.toml  README.md
memory_reorder_by_cpu/src/: main.rs
metacomment/: Cargo.toml  README.md
metacomment/src/: main.rs  (+1 more)
neonlab/: Cargo.toml  README.md
pdf/: Cargo.toml  README.md
pin/: README.md
poem-server/: Cargo.toml
pointer_provenance/: Cargo.toml  README.md
post_and_comments/: Cargo.toml
protobuf_demo/: Cargo.toml  README.md  build.rs  download_protoc.sh
reqwest-client/: Cargo.toml
sentry_demo/: Cargo.toml
src/: main.rs
tokio-demo/: Cargo.toml
too-many-lists/: Cargo.toml  README.md
totp_verifier/: Cargo.toml  README.md
tracingdemo/: Cargo.toml
unsolved/: Cargo.toml  README.md
(+20 files in other folders)
