[package]
name = "hello"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chromiumoxide = "0.6.0"
fantoccini = "0.19.3"
futures = "0.3.30"
mdka = "1.2.5"
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
