[package]
name = "chati"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib/mod.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
fantoccini = "0.19.3"
futures = "0.3.30"
lazy_static = "1.5.0"
reqwest = { version = "0.12.5", features = ["blocking"] }
serde = "1.0.203"
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
tokio-stream = "0.1.15"
tokio-tungstenite = { version = "0.23.1", features = ["url"] }
url = "2.5.2"
